@@ -37,181 +37,188 @@ import uk.gov.companieshouse.api.testdata.service.RandomService;
 
 @ExtendWith(MockitoExtension.class)
 class UserServiceImplTest {
-  private static final Instant DATE_NOW = Instant.now();
+    private static final Instant DATE_NOW = Instant.now();
 
-  @Mock private UserRepository userRepository;
+    @Mock
+    private UserRepository userRepository;
 
-  @Mock private RandomService randomService;
+    @Mock
+    private RandomService randomService;
 
-  @Spy @InjectMocks private UserServiceImpl userServiceImpl;
+    @Spy
+    @InjectMocks
+    private UserServiceImpl userServiceImpl;
 
-  @Test
-  void testCreateUserWithoutRoles() throws DataException {
-    UserSpec userSpec = new UserSpec();
-    userSpec.setPassword("password");
-    var generatedUserId = "randomuserid";
-    when(randomService.getString(24)).thenReturn(generatedUserId);
-    when(userServiceImpl.getDateNow()).thenReturn(DATE_NOW);
+    @Test
+    void testCreateUserWithoutRoles() throws DataException {
+        UserSpec userSpec = new UserSpec();
+        userSpec.setPassword("password");
+        var generatedUserId = "randomised";
+        when(randomService.getString(24)).thenReturn(generatedUserId);
+        when(userServiceImpl.getDateNow()).thenReturn(DATE_NOW);
 
-    UserData userData = userServiceImpl.create(userSpec);
+        UserData userData = userServiceImpl.create(userSpec);
 
-    ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
-    verify(userRepository).save(userCaptor.capture());
-    User savedUser = userCaptor.getValue();
+        ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
+        verify(userRepository).save(userCaptor.capture());
+        User savedUser = userCaptor.getValue();
 
-    assertCommonUserAssertions(userSpec, savedUser, userData, generatedUserId);
-    assertNull(savedUser.getRoles(), "User should have no roles assigned");
-  }
+        assertCommonUserAssertions(userSpec, savedUser, userData, generatedUserId);
+        assertNull(savedUser.getRoles(), "User should have no roles assigned");
+    }
 
-  @Test
-  void testCreateUserWithRoles() throws DataException {
-    UserSpec userSpec = new UserSpec();
-    userSpec.setPassword("password");
+    @Test
+    void testCreateUserWithRoles() throws DataException {
+        UserSpec userSpec = new UserSpec();
+        userSpec.setPassword("password");
 
-    RoleSpec roleSpec = new RoleSpec();
-    roleSpec.setId("role-id");
-    roleSpec.setPermissions(Arrays.asList("permission1", "permission2"));
-    userSpec.setRoles(List.of(roleSpec));
+        RoleSpec roleSpec = new RoleSpec();
+        roleSpec.setId("role-id");
+        roleSpec.setPermissions(Arrays.asList("permission1", "permission2"));
+        userSpec.setRoles(List.of(roleSpec));
 
-    String generatedUserId = "randomuserid";
-    when(randomService.getString(anyInt())).thenReturn(generatedUserId);
-    when(userServiceImpl.getDateNow()).thenReturn(DATE_NOW);
+        String generatedUserId = "randomised";
+        when(randomService.getString(anyInt())).thenReturn(generatedUserId);
+        when(userServiceImpl.getDateNow()).thenReturn(DATE_NOW);
 
-    UserData userData = userServiceImpl.create(userSpec);
+        UserData userData = userServiceImpl.create(userSpec);
 
-    ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
-    verify(userRepository).save(userCaptor.capture());
-    User savedUser = userCaptor.getValue();
+        ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
+        verify(userRepository).save(userCaptor.capture());
+        User savedUser = userCaptor.getValue();
 
-    assertCommonUserAssertions(userSpec, savedUser, userData, generatedUserId);
-    assertEquals(1, savedUser.getRoles().size(), "User should have one role assigned");
-    assertEquals(
-        roleSpec.getId(),
-        savedUser.getRoles().getFirst(),
-        "The assigned role should match the role ID");
-  }
+        assertCommonUserAssertions(userSpec, savedUser, userData, generatedUserId);
+        assertEquals(1, savedUser.getRoles().size(), "User should have one role assigned");
+        assertEquals(
+                roleSpec.getId(),
+                savedUser.getRoles().getFirst(),
+                "The assigned role should match the role ID");
+    }
 
-  @Test
-  void testCreateUserWithEmptyRolesList() throws DataException {
-    UserSpec userSpec = new UserSpec();
-    userSpec.setPassword("password");
-    userSpec.setRoles(new ArrayList<>());
+    @Test
+    void testCreateUserWithEmptyRolesList() throws DataException {
+        UserSpec userSpec = new UserSpec();
+        userSpec.setPassword("password");
+        userSpec.setRoles(new ArrayList<>());
 
-    String generatedUserId = "randomuserid";
-    when(randomService.getString(24)).thenReturn(generatedUserId);
-    when(userServiceImpl.getDateNow()).thenReturn(DATE_NOW);
+        String generatedUserId = "randomised";
+        when(randomService.getString(24)).thenReturn(generatedUserId);
+        when(userServiceImpl.getDateNow()).thenReturn(DATE_NOW);
 
-    UserData userData = userServiceImpl.create(userSpec);
+        UserData userData = userServiceImpl.create(userSpec);
 
-    ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
-    verify(userRepository).save(userCaptor.capture());
-    User savedUser = userCaptor.getValue();
+        ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
+        verify(userRepository).save(userCaptor.capture());
+        User savedUser = userCaptor.getValue();
 
-    assertCommonUserAssertions(userSpec, savedUser, userData, generatedUserId);
-    assertNull(savedUser.getRoles(), "User should have no roles assigned");
-  }
+        assertCommonUserAssertions(userSpec, savedUser, userData, generatedUserId);
+        assertNull(savedUser.getRoles(), "User should have no roles assigned");
+    }
 
-  @Test
-  void testGetUserById() {
-    String userId = "userId";
-    List<String> roles = List.of("role1", "role2");
-    User user = new User();
-    user.setId(userId);
-    user.setRoles(roles);
+    @Test
+    void testGetUserById() {
+        String userId = "userId";
+        List<String> roles = List.of("role1", "role2");
+        User user = new User();
+        user.setId(userId);
+        user.setRoles(roles);
 
-    when(userRepository.findById(userId)).thenReturn(Optional.of(user));
+        when(userRepository.findById(userId)).thenReturn(Optional.of(user));
 
-    Optional<User> result = userServiceImpl.getUserById(userId);
+        Optional<User> result = userServiceImpl.getUserById(userId);
 
-    assertTrue(result.isPresent(), "User should be present");
-    assertEquals(roles.size(), result.get().getRoles().size(), "Role list size should match");
-    assertTrue(result.get().getRoles().containsAll(roles), "Role list should contain all roles");
-    verify(userRepository, times(1)).findById(userId);
-  }
+        assertTrue(result.isPresent(), "User should be present");
+        assertEquals(roles.size(), result.get().getRoles().size(), "Role list size should match");
+        assertTrue(result.get().getRoles().containsAll(roles),
+                "Role list should contain all roles");
+        verify(userRepository, times(1)).findById(userId);
+    }
 
-  @Test
-  void testGetUserIdUserByNotFound() {
-    String userId = "userId";
-    when(userRepository.findById(userId)).thenReturn(Optional.empty());
+    @Test
+    void testGetUserIdUserByNotFound() {
+        String userId = "userId";
+        when(userRepository.findById(userId)).thenReturn(Optional.empty());
 
-    Optional<User> result = userServiceImpl.getUserById(userId);
+        Optional<User> result = userServiceImpl.getUserById(userId);
 
-    assertTrue(result.isEmpty(), "User should be empty when not found");
-  }
+        assertTrue(result.isEmpty(), "User should be empty when not found");
+    }
 
-  @Test
-  void testDeleteUser() {
-    User mockUser = new User();
-    mockUser.setId("userId");
+    @Test
+    void testDeleteUser() {
+        User mockUser = new User();
+        mockUser.setId("userId");
 
-    when(userRepository.findById("userId")).thenReturn(Optional.of(mockUser));
-    doNothing().when(userRepository).delete(any(User.class));
+        when(userRepository.findById("userId")).thenReturn(Optional.of(mockUser));
+        doNothing().when(userRepository).delete(any(User.class));
 
-    boolean result = userServiceImpl.delete("userId");
+        boolean result = userServiceImpl.delete("userId");
 
-    assertTrue(result, "User should be deleted successfully");
-    verify(userRepository, times(1)).delete(mockUser);
-  }
+        assertTrue(result, "User should be deleted successfully");
+        verify(userRepository, times(1)).delete(mockUser);
+    }
 
-  @Test
-  void testDeleteUserUserRepositoryThrowsException() {
-    String userId = "userId";
-    User mockUser = new User();
-    mockUser.setId(userId);
+    @Test
+    void testDeleteUserUserRepositoryThrowsException() {
+        String userId = "userId";
+        User mockUser = new User();
+        mockUser.setId(userId);
 
-    when(userRepository.findById(userId)).thenReturn(Optional.of(mockUser));
-    doThrow(new RuntimeException("Database error")).when(userRepository).delete(mockUser);
+        when(userRepository.findById(userId)).thenReturn(Optional.of(mockUser));
+        doThrow(new RuntimeException("Database error")).when(userRepository).delete(mockUser);
 
-    RuntimeException exception =
-        assertThrows(RuntimeException.class, () -> userServiceImpl.delete(userId));
+        RuntimeException exception =
+                assertThrows(RuntimeException.class, () -> userServiceImpl.delete(userId));
 
-    assertEquals("Database error", exception.getMessage(), "Exception message should match");
-    verify(userRepository, times(1)).findById(userId);
-    verify(userRepository, times(1)).delete(mockUser);
-  }
+        assertEquals("Database error", exception.getMessage(), "Exception message should match");
+        verify(userRepository, times(1)).findById(userId);
+        verify(userRepository, times(1)).delete(mockUser);
+    }
 
-  @Test
-  void testDeleteUserNotFound() {
-    String userId = "nonExistentUserId";
+    @Test
+    void testDeleteUserNotFound() {
+        String userId = "nonExistentUserId";
 
-    when(userRepository.findById(userId)).thenReturn(Optional.empty());
+        when(userRepository.findById(userId)).thenReturn(Optional.empty());
 
-    boolean result = userServiceImpl.delete(userId);
+        boolean result = userServiceImpl.delete(userId);
 
-    assertFalse(result, "Delete should return false when user does not exist");
-    verify(userRepository, times(1)).findById(userId);
-    verify(userRepository, times(0)).delete(any(User.class));
-  }
+        assertFalse(result, "Delete should return false when user does not exist");
+        verify(userRepository, times(1)).findById(userId);
+        verify(userRepository, times(0)).delete(any(User.class));
+    }
 
-  private void assertCommonUserAssertions(
-      UserSpec userSpec, User savedUser, UserData userData, String generatedUserId) {
-    assertEquals(
-        userSpec.getPassword(),
-        savedUser.getPassword(),
-        "Password should match the one set in UserSpec");
-    assertEquals(generatedUserId, savedUser.getId(), "User ID should match the generated ID");
-    assertEquals(
-        "test-data-generated" + generatedUserId + "@test.companieshouse.gov.uk",
-        savedUser.getEmail(),
-        "Email should match the generated email");
-    assertEquals(
-        "Forename-" + generatedUserId,
-        savedUser.getForename(),
-        "Forename should match the generated forename");
-    assertEquals(
-        "Surname-" + generatedUserId,
-        savedUser.getSurname(),
-        "Surname should match the generated surname");
-    assertEquals("GB_en", savedUser.getLocale(), "Locale should be 'GB_en'");
-    assertEquals(
-        true, savedUser.getDirectLoginPrivilege(), "Direct login privilege should be true");
-    assertEquals(DATE_NOW, savedUser.getCreated(), "Created date should be set to today's date");
+    private void assertCommonUserAssertions(
+            UserSpec userSpec, User savedUser, UserData userData, String generatedUserId) {
+        assertEquals(
+                userSpec.getPassword(),
+                savedUser.getPassword(),
+                "Password should match the one set in UserSpec");
+        assertEquals(generatedUserId, savedUser.getId(), "User ID should match the generated ID");
+        assertEquals(
+                "test-data-generated" + generatedUserId + "@test.companieshouse.gov.uk",
+                savedUser.getEmail(),
+                "Email should match the generated email");
+        assertEquals(
+                "Forename-" + generatedUserId,
+                savedUser.getForename(),
+                "Forename should match the generated forename");
+        assertEquals(
+                "Surname-" + generatedUserId,
+                savedUser.getSurname(),
+                "Surname should match the generated surname");
+        assertEquals("GB_en", savedUser.getLocale(), "Locale should be 'GB_en'");
+        assertEquals(
+                true, savedUser.getDirectLoginPrivilege(), "Direct login privilege should be true");
+        assertEquals(DATE_NOW, savedUser.getCreated(),
+                "Created date should be set to today's date");
 
-    assertEquals(generatedUserId, userData.getId(), "User ID should match the generated ID");
-    assertTrue(
-        userData.getEmail().contains("test-data-generated"),
-        "Email should contain 'test-data-generated'");
-    assertTrue(userData.getForename().contains("Forename"), "Forename should contain 'Forename'");
-    assertTrue(userData.getSurname().contains("Surname"), "Surname should contain 'Surname'");
-  }
+        assertEquals(generatedUserId, userData.getId(), "User ID should match the generated ID");
+        assertTrue(
+                userData.getEmail().contains("test-data-generated"),
+                "Email should contain 'test-data-generated'");
+        assertTrue(userData.getForename().contains("Forename"),
+                "Forename should contain 'Forename'");
+        assertTrue(userData.getSurname().contains("Surname"), "Surname should contain 'Surname'");
+    }
 }
